# PyDocstring

./: README.md  pyproject.toml
.github/agents/: app-agent.md
.github/workflows/: ci.yml
.junie/: guidelines.md
docs/: architecture.md  cli.md  testing.md
src/pydocstring/: __init__.py  cli.py  converter.py  detector.py  models.py  normalize.py  parser_google.py  parser_sphinx.py  project_scanner.py  renderer_google.py  renderer_sphinx.py  rewriter.py  strip.py
tests/: __init__.py  test_converter.py  test_detector.py  test_integration.py  test_models.py  test_normalize.py  test_parser_google.py  test_parser_sphinx.py  test_renderers.py  test_rewriter.py  test_strip_function_bodies_tool.py
tests/fixtures/projects/google_to_sphinx/complex_project/: test_doc_001.py  test_doc_002.py  test_doc_003.py  test_doc_004.py  test_doc_005.py  test_doc_006.py  test_doc_007.py  test_doc_008.py  test_doc_009.py  test_doc_010.py  test_doc_011.py  test_doc_012.py  test_doc_013.py  test_doc_014.py  test_doc_015.py  test_doc_016.py  test_doc_017.py  test_doc_018.py  test_doc_019.py  test_doc_020.py  test_doc_021.py  test_doc_022.py  test_doc_023.py  test_doc_024.py  test_doc_025.py  test_doc_026.py  test_doc_028.py  test_doc_029.py  test_doc_030.py
tests/fixtures/projects/roundtrip/basic_project/: sample.py
tests/fixtures/projects/sphinx_to_google/complex_project/: test_doc_002.py  test_doc_006.py  test_doc_007.py  test_doc_008.py  test_doc_009.py  test_doc_010.py  test_doc_011.py  (+14 more)
tests/lint/: lint_rules.py  linter.py  test_linting.py
tools/: strip_function_bodies.py
(+20 files in other folders)
